2006-12-17  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, rbgdk-pixbuf.c, lib/gdk_pixbuf2.rb: moved
	integration API of Gdk::Pixbuf and Cairo::Context from Ruby/GTK2.

2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/*.rb: Remove Gtk.init, Code cleanup.

2006-04-23  NISHI Takao

	* rbgdk-pixdata.c: Gdk::Pixdata#length returns the size of pixel_data.
	(length - GDK_PIXDATA_HEADER_LENGTH).
	Gdk::Pixdata#pixel_data returns the data size of length - 
	GDK_PIXDATA_HEADER_LENGTH. [Patch#1473708]

2005-09-24 Guillaume Cottenceau

	* rbgdk-pixbuf.c, rbgdk-pixbuf.h, rbgdk-pixbufsimpleanim.c,
	  sample/simpleanim.rb: 2.8: add Gdk::PixbufSimpleAnim with #new
	  and #add_frame
	
2005-09-18  Kouhei Sutou  <kou@cozmixng.org>

	* rbgdk-pixbuf.c (get_pixels): Fix pixels size.

2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c, rbgdk-pixbuf-loader.c, rbgdk-pixbuf-format.c: 
	Fix a compiling warning. 

2005-03-22  Mirko Maischberger  <mirko@lilik.it>

	* sample/*.rb: sh-bang (!#) normalization.
	Reported by Mezz
	
2005-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf-format.c: Fix a compilation problemn on GTK+-2.0.x.
	* README: Revised.

2005-02-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Implement gdk_pixbuf_new_from_file_at_scale 
	as Gdk::Pixbuf.new. 
	* rbgdk-pixbuf-format.c: Added Gdk::PixbufFormat#scalable?,
	#disable?, #set_disabled, #license.
	* rbgdk-pixbuf.c: Added Gdk::Pixbuf#rotate, #flip for GTK+-2.6. 
	* sample/flip.rb, rotate.rb: Added.

2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Use create_makefile_at_srcdir.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes.

2004-12-16  leon breedt  <bitserf@gmail.com>

	* rbgdk-pixbuf-format.c, rbgdkpixbuf.h: Fix compilation problems.

2004-12-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbufanimation.c: Fix a wrong number of arguments for 
	Gdk::PixbufAnimationIter#advance. 